--- a/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
@@ -10,14 +10,14 @@
 <h1 class="govuk-heading-l">Privacy Notice</h1>
 
 <h2 class="govuk-heading-m">Who we are</h2>
-<p>
-    This service is run by the Department of Education.
+<p class="govuk-body">
+    This service is run by the Department of Education (DfE).
 </p>
-<p>
-    This means the DfE is the data controller for the <strong>Eligibility Checking Engine</strong> and decides how and why any personal data is processed, including by third parties on our behalf.
+<p class="govuk-body">
+    This means the DfE is the data controller for the Check a family's eligibility service, and decides how and why any personal data is processed, including by third parties on our behalf.
 </p>
-<p>
-    We will use the information you give us according to <!--<a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter">-->DfE personal information charter.
+<p class="govuk-body">
+    We will use the information you give us according to <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter">DfE personal information charter.</a>
 </p>
 <p>
     This privacy policy is relevant to parents and/or guardians using the service, and also to any children you may be
@@ -25,45 +25,33 @@
 </p>
 
 
-<h2 class="govuk-heading-m">Personal data standards</h2>
-<p>
-    To lawfully use your personal data, we need to meet one or more conditions in the data protection legislation.
-</p>
-<p>
-    You can read the <a href="https://www.gov.uk/government/organisations/department-for-education/about/personal-information-charter">DfE Personal information charter </a> for more information about the standards DfE adheres to when we collect, hold or use your and/or your child’s personal data.
-</p>
-<p>
-    When you use this service, we will use any personal information you give us for administration and research purposes.
-</p>
-
-
 <h2 class="govuk-heading-m">Personal data we use</h2>
-<p>
-    This service will use your
+<p class="govuk-body">
+    This service will use your:
 </p>
 <ul class="govuk-list govuk-list--bullet">
     <li>
         personal details as a parent or guardian, including your name and email address
     </li>
     <li>
-        your National Insurance (NI) number and/or Asylum Support Reference (previous known as National Asylum Support Service) number
+        your National Insurance (NI) number and/or asylum support reference (previous known as National Asylum Support Service) number
     </li>
     <li>
         any social and/or financial benefits claimed by you
     </li>
     <li>
-        child's/children’s details including first name(s), surname(s) and school(s), eligibility number(s) and date(s) of birth
+        children’s details including first names, surnames, schools, eligibility numbers and dates of birth
     </li>
     <li>
-        <!--your IP address, and -->details of which version of web browser you use to access the service
+        details of which version of web browser you use to access the service
     </li>
 </ul>
 <p></p>
-<p>
+<p class="govuk-body">
     We must have a valid reason to collect your personal data – also known as ‘lawful basis’ under the The Data Protection Act 2018. Our lawful basis is that of 'public task', so that we can run the Entitlement checker as a service to you.
 </p>
-<p>
-    In relation to your child’s personal information, DfE has specific privacy policies. You can read Privacy information for:
+<p class="govuk-body">
+    In relation to your child’s personal information, DfE has specific privacy policies. You can read privacy information for:
 </p>
 <ul>
     <li>
@@ -94,7 +82,6 @@
     </li>
 </ul>
 
-
 <h2 class="govuk-heading-m">How long we keep your data</h2>
 <h3 class="govuk-heading-s">Checks resulting in no eligibility or no claims</h3>
 <p class="govuk-body">
@@ -112,7 +99,8 @@
 <h2 class="govuk-heading-m">Last updated</h2>
 
 <p class="govuk-body">
-    This version was last updated in December 2024.
+    This version was last updated in January 2025.
 </p>
 <p class="govuk-body">
     We may need to update this privacy notice, so we recommend you revisit this from time to time.
+</p>
