--- a/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
@@ -8,6 +8,28 @@
     int currentPage = ViewBag.CurrentPage ?? 1;
     int totalRecords = ViewBag.TotalRecords;
     int totalPages = (int)Math.Ceiling((double)totalRecords / recordsPerPage);
+
+    Dictionary<string, string> statusColor = new Dictionary<string, string>
+    {
+        {"Entitled", "govuk-tag--green"},
+        {"EvidenceNeeded", "govuk-tag--light-blue"},
+        {"Receiving", "govuk-tag--pink"},
+        {"SentForReview", "govuk--tag-blue"},
+        {"ReviewedEntitled", "govuk--tag-green"},
+        {"ReviewedNotEntitled", "govuk--tag-red"}
+    };
+
+    Dictionary<string, string> statusName = new Dictionary<string, string>
+    {
+        {"Entitled", "Entitled"},
+        {"EvidenceNeeded", "Evidence Needed"},
+        {"Receiving", "Receiving Entitlement"},
+        {"SentForReview", "Sent for Review"},
+        {"ReviewedEntitled", "Reviewed Entitled"},
+        {"ReviewedNotEntitled", "Reviewed Not Entitled"}
+    };
+
+
 }
 
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
@@ -42,16 +64,29 @@
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="col" id="select-all"></th>
                 <th class="govuk-table__header" scope="col">Reference</th>
-                <th class="govuk-table__header" scope="col">Parent / Guardian</th>
-                <th class="govuk-table__header" scope="col">Child</th>
-                <th class="govuk-table__header" scope="col">Child DOB</th>
+                <th class="govuk-table__header" scope="col">Child name</th>
+                <th class="govuk-table__header" scope="col">Child DoB</th>
+                <th class="govuk-table__header" scope="col">Date submitted</th>
                 <th class="govuk-table__header" scope="col">Status</th>
-                <th class="govuk-table__header" scope="col">Submission date</th>
             </tr>
         </thead>
-        @Html.EditorFor(model => model.People)
+        <tbody>
+            @foreach (var person in Model.People)
+            {
+                <tr>
+                    <td class="govuk-table__cell">@Html.ActionLink(person.Person.Reference, person.DetailView, "application", new { id = person.Person.Id }, new { @class = "govuk-link" })</td>
+                    <td class="govuk-table__cell">@(@person.Person.ChildFirstName + " " + @person.Person.ChildLastName)</td>
+                    <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ChildDateOfBirth).ToString("dd MMM yyyy")</td>
+                    <td class="govuk-table__cell">@(Convert.ToDateTime(@person.Person.Created).ToString("dd MMM yyyy"))</td>
+                    <td class="govuk-table__cell">
+                        <strong class="govuk-tag @statusColor[person.Person.Status]">
+                            @statusName[person.Person.Status]
+                        </strong>
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
     var paginationModel = new PaginationPartialViewModel
                 {
