--- a/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
@@ -7,8 +7,11 @@
     ViewData["Layout"] = "full";
     int recordsPerPage = 10;
     int currentPage = ViewBag.CurrentPage ?? 1;
-    int totalRecords = ViewBag.TotalRecords;
+    int totalRecords = ViewBag.TotalRecords ?? 0;
     int totalPages = (int)Math.Ceiling((double)totalRecords / recordsPerPage);
+
+    <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
+    @* <a class="govuk-back-link-nolink"></a> *@
 
     Dictionary<string, string> statusColor = new Dictionary<string, string>
     {
@@ -43,10 +46,6 @@
     var applicationSearch = string.IsNullOrEmpty(applicationSearchJson) ? new ApplicationSearch() : JsonConvert.DeserializeObject<ApplicationSearch>(applicationSearchJson);
     var selectedStatus = applicationSearch.Status?.ToString();
 }
-
-
-<a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
-@* <a class="govuk-back-link-nolink"></a> *@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
@@ -243,51 +242,53 @@
                                 <div class="moj-filter-layout__content">
                                     <div class="moj-scrollable-pane">
                                         <div class="moj-scrollable-pane">
-                                            @if (Model.People != null && Model.People.Any())
-                                            {
-                                                <table class="govuk-table" id="resultsTable">
-                                                    <thead class="govuk-table__head">
-                                                        <tr class="govuk-table__row">
-                                                            <th class="govuk-table__header" scope="col">Reference</th>
-                                                            <th class="govuk-table__header" scope="col">Child name</th>
-                                                            <th class="govuk-table__header" scope="col">Child DOB</th>
-                                                            <th class="govuk-table__header" scope="col">Date submitted</th>
-                                                            <th class="govuk-table__header" scope="col">Status</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @foreach (var person in Model.People)
-                                                        {
-                                                            <tr>
-                                                                <td class="govuk-table__cell">@Html.ActionLink(person.Person.Reference, person.DetailView, "application", new { id = person.Person.Id }, new { @class = "govuk-link" })</td>
-                                                                <td class="govuk-table__cell">@(@person.Person.ChildFirstName + " " + person.Person.ChildLastName)</td>
-                                                                <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ChildDateOfBirth).ToString("dd MMM yyyy")</td>
-                                                                <td class="govuk-table__cell">@person.Person.Created.ToString("dd MMM yyyy")</td>
-                                                                <td class="govuk-table__cell">
-                                                                    <strong class="govuk-tag @statusColor[person.Person.Status]">
-                                                                        @statusName[person.Person.Status]
-                                                                    </strong>
-                                                                </td>
-                                                            </tr>
-                                                        }
-                                                    </tbody>
-                                                </table>
-                                                var paginationModel = new PaginationPartialViewModel
-                {
-                    CurrentPage = ViewBag.CurrentPage,
-                    TotalPages = ViewBag.TotalPages,
-                    RecordsPerPage = ViewBag.RecordsPerPage,
-                    TotalRecords = ViewBag.TotalRecords,
-                    ControllerName = "SearchResults"
+                                            @{
+                                                if (Model != null)
+                                                    if (Model.People != null && Model.People.Any())
+                                                    {
+                                                        <table class="govuk-table" id="resultsTable">
+                                                            <thead class="govuk-table__head">
+                                                                <tr class="govuk-table__row">
+                                                                    <th class="govuk-table__header" scope="col">Reference</th>
+                                                                    <th class="govuk-table__header" scope="col">Child name</th>
+                                                                    <th class="govuk-table__header" scope="col">Child DOB</th>
+                                                                    <th class="govuk-table__header" scope="col">Date submitted</th>
+                                                                    <th class="govuk-table__header" scope="col">Status</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                @foreach (var person in Model.People)
+                                                                {
+                                                                    <tr>
+                                                                        <td class="govuk-table__cell">@Html.ActionLink(person.Person.Reference, person.DetailView, "application", new { id = person.Person.Id }, new { @class = "govuk-link" })</td>
+                                                                        <td class="govuk-table__cell">@(@person.Person.ChildFirstName + " " + person.Person.ChildLastName)</td>
+                                                                        <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ChildDateOfBirth).ToString("dd MMM yyyy")</td>
+                                                                        <td class="govuk-table__cell">@person.Person.Created.ToString("dd MMM yyyy")</td>
+                                                                        <td class="govuk-table__cell">
+                                                                            <strong class="govuk-tag @statusColor[person.Person.Status]">
+                                                                                @statusName[person.Person.Status]
+                                                                            </strong>
+                                                                        </td>
+                                                                    </tr>
+                                                                }
+                                                            </tbody>
+                                                        </table>
+                                                        var paginationModel = new PaginationPartialViewModel
+                    {
+                        CurrentPage = ViewBag.CurrentPage,
+                        TotalPages = ViewBag.TotalPages,
+                        RecordsPerPage = ViewBag.RecordsPerPage,
+                        TotalRecords = ViewBag.TotalRecords,
+                        ControllerName = "SearchResults"
 
-                };
-                                                @Html.Partial("PaginationPartial", paginationModel)
+                    };
+                                                        @Html.Partial("PaginationPartial", paginationModel)
+                                                    }
+                                                    else
+                                                    {
+                                                        <p>No results found.</p>
+                                                    }
                                             }
-                                            else
-                                            {
-                                                <p>No results found.</p>
-                                            }
-
                                         </div>
                                     </div>
                                 </div>
