date formatting changes
single digit days will not use a prefixed '0' i.e (7 not 07)
short month used where space is limited (i.e feb, oct)
full month used elsewhere  (i.e february, october)

changes towards the top of 'searchResults.cshtml' fix a compilation error that existed when starting this branch from the latest main

--- a/CheckYourEligibility-Admin/Views/Application/EditorTemplates/SelectPersonEditorViewModel.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/EditorTemplates/SelectPersonEditorViewModel.cshtml
@@ -43,11 +43,11 @@
     <td class="govuk-table__cell">@(@Model.Person.ChildFirstName + " " + Model.Person.ChildLastName)</td>
     @if (Model.ShowParentDob)
     {
-        <td class="govuk-table__cell">@Convert.ToDateTime(Model.Person.ParentDateOfBirth).ToString("dd MMM yyyy")</td>
+        <td class="govuk-table__cell">@Convert.ToDateTime(Model.Person.ParentDateOfBirth).ToString("d MMM yyyy")</td>
     }
     else
     {
-        <td class="govuk-table__cell">@Convert.ToDateTime(Model.Person.ChildDateOfBirth).ToString("dd MMM yyyy")</td>
+        <td class="govuk-table__cell">@Convert.ToDateTime(Model.Person.ChildDateOfBirth).ToString("d MMM yyyy")</td>
     }
     @if(Model.ShowSchool)
     {
@@ -61,7 +61,7 @@
         </strong>
     </td>
     }
-    <td class="govuk-table__cell">@Model.Person.Created.ToString("dd MMM yyyy")</td>
+    <td class="govuk-table__cell">@Model.Person.Created.ToString("d MMM yyyy")</td>
   
    
 </tr>
