--- a/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
@@ -67,10 +67,10 @@
                         <td></td>
                         <td class="govuk-table__cell">@Html.ActionLink(person.Person.Reference, person.DetailView, "application", new { id = person.Person.Id }, new { @class = "govuk-link" })</td>
                         <td class="govuk-table__cell">@(@person.Person.ParentFirstName + " " + @person.Person.ParentLastName)</td>
-                        <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ParentDateOfBirth).ToString("dd MMM yyyy")</td>
+                        <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ParentDateOfBirth).ToString("d MMM yyyy")</td>
                         <td class="govuk-table__cell">@(@person.Person.ChildFirstName + " " + person.Person.ChildLastName)</td>
                         <td class="govuk-table__cell">@(@person.Person.Establishment.Name)</td>
-                        <td class="govuk-table__cell">@person.Person.Created.ToString("dd MMM yyyy")</td>
+                        <td class="govuk-table__cell">@person.Person.Created.ToString("d MMM yyyy")</td>
                     </tr>
                 }
             </tbody>
