--- a/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CheckYourEligibility_FrontEnd.ViewModels
-@model PeopleSelectionViewModel;
+@using System.Collections.Generic;
+@model PeopleSelectionViewModel
 
 @{
     ViewData["Title"] = "Search results (" + @ViewBag.TotalRecords + ")";
@@ -8,8 +9,10 @@
     int currentPage = ViewBag.CurrentPage ?? 1;
     int totalRecords = ViewBag.TotalRecords;
     int totalPages = (int)Math.Ceiling((double)totalRecords / recordsPerPage);
+}
 
-    Dictionary<string, string> statusColor = new Dictionary<string, string>
+@{
+    var statusColor = new Dictionary<string, string>()
     {
         {"Entitled", "govuk-tag--green"},
         {"EvidenceNeeded", "govuk-tag--light-blue"},
@@ -19,7 +22,7 @@
         {"ReviewedNotEntitled", "govuk--tag-red"}
     };
 
-    Dictionary<string, string> statusName = new Dictionary<string, string>
+    var statusName = new Dictionary<string, string>()
     {
         {"Entitled", "Entitled"},
         {"EvidenceNeeded", "Evidence Needed"},
@@ -28,8 +31,6 @@
         {"ReviewedEntitled", "Reviewed Entitled"},
         {"ReviewedNotEntitled", "Reviewed Not Entitled"}
     };
-
-
 }
 
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
@@ -77,8 +78,8 @@
                 <tr>
                     <td class="govuk-table__cell">@Html.ActionLink(person.Person.Reference, person.DetailView, "application", new { id = person.Person.Id }, new { @class = "govuk-link" })</td>
                     <td class="govuk-table__cell">@(@person.Person.ChildFirstName + " " + @person.Person.ChildLastName)</td>
-                    <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ChildDateOfBirth).ToString("dd MMM yyyy")</td>
-                    <td class="govuk-table__cell">@(Convert.ToDateTime(@person.Person.Created).ToString("dd MMM yyyy"))</td>
+                    <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ChildDateOfBirth).ToString("d MMM yyyy")</td>
+                    <td class="govuk-table__cell">@(Convert.ToDateTime(@person.Person.Created).ToString("d MMM yyyy"))</td>
                     <td class="govuk-table__cell">
                         <strong class="govuk-tag @statusColor[person.Person.Status]">
                             @statusName[person.Person.Status]
